[gd_scene load_steps=12 format=3 uid="uid://dy52tldk5kiwh"]

[ext_resource type="Script" path="res://Scripts/intro.gd" id="1_67asw"]
[ext_resource type="PackedScene" uid="uid://3g6ybacu2x0d" path="res://BlendScenes/intro_room.blend" id="1_h6a5t"]
[ext_resource type="Texture2D" uid="uid://6up3tm7knfbr" path="res://Sprites/Backgrounds/stream_screen.jpg" id="2_y7qhk"]
[ext_resource type="Texture2D" uid="uid://f7fgobqwhy8r" path="res://BlendScenes/textures/Monitor Color.png" id="3_gxunm"]
[ext_resource type="Shader" path="res://Scenes/coom.gdshader" id="4_a17f2"]
[ext_resource type="PackedScene" uid="uid://dtlql8phk75pg" path="res://Scenes/textbox.tscn" id="5_eyt86"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_mjh2k"]
albedo_color = Color(0.337255, 0.337255, 0.337255, 1)
albedo_texture = ExtResource("3_gxunm")
metallic = 0.44
metallic_specular = 0.56
roughness = 0.75
clearcoat_enabled = true
clearcoat = 0.33
texture_filter = 4

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1p1x8"]
render_priority = 0
shader = ExtResource("4_a17f2")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_t58v7"]
render_priority = 0
shader = ExtResource("4_a17f2")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2in78"]
render_priority = 0
shader = ExtResource("4_a17f2")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_74gbq"]
render_priority = 0
shader = ExtResource("4_a17f2")

[node name="Node3D" type="Node3D"]
script = ExtResource("1_67asw")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-4.3496e-08, -0.0991461, 0.995073, -4.33381e-09, 0.995073, 0.0991461, -1, 1.33227e-15, -4.37114e-08, -0.809044, 1.5, 2)
fov = 90.0
far = 10000.0

[node name="intro_room" parent="." instance=ExtResource("1_h6a5t")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2)

[node name="Cube_002" parent="intro_room" index="2"]
surface_material_override/0 = SubResource("StandardMaterial3D_mjh2k")

[node name="Point" parent="intro_room" index="3"]
transform = Transform3D(1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 1.98251, 0)
light_color = Color(0.890196, 0.890196, 0.890196, 1)
light_energy = 2.223
light_indirect_energy = 3.667
light_volumetric_fog_energy = 3.222
light_specular = 0.3
light_bake_mode = 1

[node name="Cube_005" parent="intro_room" index="6"]
transform = Transform3D(0.0136122, 0, 0, 0, 0.0136122, 0, 0, 0, 0.0136122, -1.02579, 1.46393, 0.154547)
material_override = SubResource("ShaderMaterial_1p1x8")
transparency = 0.6
surface_material_override/0 = SubResource("ShaderMaterial_t58v7")

[node name="Cube_006" parent="intro_room" index="7"]
transform = Transform3D(0.00611431, -0.000501506, 0, 0.000501506, 0.00611431, 0, 0, 0, 0.00613485, -1.02965, 1.51198, 0.12452)
transparency = 0.8
surface_material_override/0 = SubResource("ShaderMaterial_2in78")

[node name="Cube_007" parent="intro_room" index="8"]
transparency = 0.7
cast_shadow = 0
surface_material_override/0 = SubResource("ShaderMaterial_74gbq")

[node name="Decal" type="Decal" parent="."]
transform = Transform3D(0.2546, 0.964784, -4.21695e-08, 0, -4.36192e-08, -0.997831, -0.963624, 0.254907, -1.11417e-08, -1.07086, 1.47489, 1.98905)
size = Vector3(0.531, 0.6, 0.269)
texture_albedo = ExtResource("2_y7qhk")
normal_fade = 0.999

[node name="Textbox" parent="." instance=ExtResource("5_eyt86")]

[editable path="intro_room"]
